IndexedDB: Invalid dates should not be valid keys https://bugs.webkit.org/show_bug.cgi?id=78622

Reviewed by Tony Chang.

Source/WebCore:

Tests: storage/indexeddb/invalid-keys.html
       storage/indexeddb/factory-cmp.html

* bindings/v8/IDBBindingUtilities.cpp: Special case for NaN Dates.
(WebCore::createIDBKeyFromValue):

LayoutTests:

* storage/indexeddb/factory-cmp-expected.txt:
* storage/indexeddb/factory-cmp.html:
* storage/indexeddb/invalid-keys-expected.txt:
* storage/indexeddb/invalid-keys.html:


git-svn-id: svn://svn.chromium.org/blink/trunk@107738 bbb929c8-8fbe-4397-9dbb-9b2b20218538